--- a/leetCode.html
+++ b/leetCode.html
@@ -143,26 +143,32 @@ const getDivisors = function(num) {
 };
 
 /**
- * @param {TreeNode} root
+ * @param {number[]} nums
+ * @param {number} k
  * @return {number}
  */
-var getMinimumDifference = function(root) {
-    if(!root) {//sanity check, there are at least 2 nodes in BST, so this check is unnessesary
-        return 0;
+var findPairs = function(nums, k) {
+    let cache = {};
+    let count = 0;
+    for(let num of nums) {
+        cache[num] = (cache[num] || 0)+1;
     }
-    let nodes = travels(root).sort((a, b)=>a.val-b.val);
-    let minDistance = Infinity;
-    for(let i = 0, len = nodes.length; i<len-1; i++) {
-        let tmp = nodes[i+1].val-nodes[i].val;
-        if(minDistance>tmp) {
-            minDistance = tmp;
+    for(let num in cache) {
+        if(k==0) {
+            if(cache[num]>1) {
+                count++;
+            }
+        }else if(cache[parseInt(num)+k]) {
+            count++;
         }
     }
 
-    return minDistance;
+    return count;
 };
 
-console.log(getMinimumDifference(makeTree([1, null, 3, 2])));
+console.log(findPairs([3, 1, 4, 1, 5], 2));
+console.log(findPairs([1, 2, 3, 4, 5], 1));
+console.log(findPairs([1, 3, 1, 5, 4], 0));
 
 
 
