--- a/leetCode.html
+++ b/leetCode.html
@@ -164,25 +164,22 @@ const getDivisors = function(num) {
 };
 
 /**
- * @param {TreeNode} root
- * @return {TreeNode}
+ * @param {string} s
+ * @param {number} k
+ * @return {string}
  */
-var convertBST = function(root) {
-    if(!root) {//sanity check
-        return root;
+var reverseStr = function(s, k) {
+    s = s.split("");
+    let i = 0;
+    while(i<s.length) {
+        let tmp = s.slice(i, i+k);
+        s.splice(i, k, ...tmp.reverse());
+        i += 2*k;
     }
-    
-    const nodes = preorderTraversal(root);
-    let sum = 0;
-    for(let i = nodes.length-1; i>=0; i--) {
-        sum += nodes[i].val;
-        nodes[i].val = sum;
-    }
-
-    return root;
+    return s.join("");
 };
 
-console.log(convertBST(makeTree([5, 2, 13])));
+console.log(reverseStr("abcdefgjshdgaks", 2));
 //console.log(preorderTraversal(makeTree([5, 2, 13])));
 
 
