--- a/leetCode.html
+++ b/leetCode.html
@@ -164,34 +164,16 @@ const getDivisors = function(num) {
 };
 
 /**
- * @param {TreeNode} root
- * @return {number}
+ * @param {string} s
+ * @return {boolean}
  */
-var diameterOfBinaryTree = function(root) {
-    let maxDiameter = 0;
-    const getDepth = function(node) {
-        if(!node) {
-            return 0;
-        }
-
-        let leftDepth = getDepth(node.left);
-        let rightDepth = getDepth(node.right);
-        let tmp = leftDepth + rightDepth;
-        if(tmp>maxDiameter) {
-            maxDiameter = tmp;
-        }
-        return 1 + Math.max(leftDepth, rightDepth);
-    };
-
-     getDepth(root);
-
-     return maxDiameter;
+var checkRecord = function(s) {
+    return (s.match(/L{3,}/g) || []).length<=0 && (s.match(/A/g) || []).length<=1;
 };
 
-console.log(diameterOfBinaryTree(makeTree([1, 2, 3, 4, 5])));
-console.log(diameterOfBinaryTree(makeTree([1])));
-console.log(diameterOfBinaryTree(makeTree([1, 2])));
-//console.log(preorderTraversal(makeTree([5, 2, 13])));
+//console.log(checkRecord("PPALLP"));
+console.log(checkRecord("PPALLL"));
+console.log(checkRecord("LALL"));
 
 
 
