--- a/leetCode.html
+++ b/leetCode.html
@@ -171,53 +171,17 @@ function Node(val, isLeaf,topLeft,topRight,bottomLeft,bottomRight) {
     this.bottomLeft = bottomLeft;
     this.bottomRight = bottomRight;
 };
-/**
- * @param {Node} quadTree1
- * @param {Node} quadTree2
- * @return {Node}
- */
-var intersect = function(quadTree1, quadTree2) {
-    if(quadTree1.isLeaf) {
-        if(quadTree1.val) {
-            return new Node(true, true)
-        }else {
-            return quadTree2;
-        }
+
+var maxDepth = function(root) {
+    if(!root) {
+        return 0;
     }
 
-    if(quadTree2.isLeaf) {
-        if(quadTree2.val) {
-            return new Node(true, true)
-        }else {
-            return quadTree1;
-        }
-    }
-
-    quadTree1.topLeft = intersect(quadTree1.topLeft, quadTree2.topLeft);
-    quadTree1.topRight = intersect(quadTree1.topRight, quadTree2.topRight);
-    quadTree1.bottomLeft = intersect(quadTree1.bottomLeft, quadTree2.bottomLeft);
-    quadTree1.bottomRight = intersect(quadTree1.bottomRight, quadTree2.bottomRight);
-    
-    return quadTree1;
+    return 1 + (root.children&&root.children.length ? Math.max(...root.children.map(child=>maxDepth(child))) : 0);
 };
 
-var quadTree1 = new Node(null, false, new Node(true, true), new Node(true, true), new Node(false, true), new Node(false, true));
-var quadTree2 = new Node(
-    null, 
-    false, 
-    new Node(true, true),
-    new Node(
-        null, 
-        false,
-        new Node(false, true),
-        new Node(false, true),
-        new Node(true, true),
-        new Node(true, true)
-    ),
-    new Node(true, true),
-    new Node(false, true)
-);
-console.log(intersect(quadTree1, quadTree2));
+const root = {"$id":"1","children":[{"$id":"2","children":[{"$id":"5","children":[],"val":5},{"$id":"6","children":[],"val":6}],"val":3},{"$id":"3","children":[],"val":2},{"$id":"4","children":[],"val":4}],"val":1};
+console.log(maxDepth(root));
 
 
 
