--- a/leetCode.html
+++ b/leetCode.html
@@ -180,22 +180,26 @@ const dfs = (root)=>{
 };
 
 /**
- * @param {number[]} candies
+ * @param {number[]} nums
  * @return {number}
  */
-var distributeCandies = function(candies) {
-    const typeMap = {};
-    for(let candy of candies) {
-        typeMap[candy] = 1;
-    }
-    const typeCount = Object.keys(typeMap).length;
-    
-    return Math.min(typeCount, candies.length/2);
+var findUnsortedSubarray = function(nums) {
+    var length = nums.length;
+	var min = nums[length-1];
+	var max = nums[0];
+
+	var l = 0, r = nums.length - 1;
+	
+	for (var i = 1; i <= nums.length - 2; i++){
+		if(nums[i] >= nums[i-1] && nums[i] >= nums[i+1]) max = Math.max(max, nums[i])
+		if(nums[i] <= nums[i-1] && nums[i] <= nums[i+1]) min = Math.min(min, nums[i])
+	}
+    while (nums[l] <= min) l++;
+    if(l===r+1) return 0
+	while (nums[r] >= max) r--;
+	return r - l + 1;
 };
-console.log(distributeCandies([1,1,2,2,3,3]));
-console.log(distributeCandies([1,1,2,3]));
-
-
-
+//console.log(findUnsortedSubarray([2, 6, 4, 8, 10, 9, 15]));
+console.log(findUnsortedSubarray([2, 4, 6, 8, 9, 10, 15]));
 </script>
 </body>
