--- a/leetCode.html
+++ b/leetCode.html
@@ -180,26 +180,39 @@ const dfs = (root)=>{
 };
 
 /**
- * @param {number[]} nums
- * @return {number}
+ * @param {Node} root
+ * @return {number[]}
  */
-var findUnsortedSubarray = function(nums) {
-    var length = nums.length;
-	var min = nums[length-1];
-	var max = nums[0];
-
-	var l = 0, r = nums.length - 1;
-	
-	for (var i = 1; i <= nums.length - 2; i++){
-		if(nums[i] >= nums[i-1] && nums[i] >= nums[i+1]) max = Math.max(max, nums[i])
-		if(nums[i] <= nums[i-1] && nums[i] <= nums[i+1]) min = Math.min(min, nums[i])
-	}
-    while (nums[l] <= min) l++;
-    if(l===r+1) return 0
-	while (nums[r] >= max) r--;
-	return r - l + 1;
+var preorder = function(root) {
+    const dfs = (root)=>{
+        if(!root) {
+            return [];
+        }
+        return [root].concat(...(root.children&&root.children.length?root.children.map(child=>dfs(child)):[]));
+    };
+    return dfs(root).map(node=>node.val);
 };
-//console.log(findUnsortedSubarray([2, 6, 4, 8, 10, 9, 15]));
-console.log(findUnsortedSubarray([2, 4, 6, 8, 9, 10, 15]));
+console.log(preorder({
+    val : 1,
+    children : [
+        {
+            val : 3,
+            children : [
+                {
+                    val : 5
+                },
+                {
+                    val : 6
+                }
+            ]
+        },
+        {
+            val : 2
+        },
+        {
+            val : 4
+        }
+    ]
+}));
 </script>
 </body>
