--- a/leetCode.html
+++ b/leetCode.html
@@ -199,27 +199,32 @@ var postorder = function(root) {
     return result;
 };
 
-console.log(postorder({
-    val : 1,
-    children : [
-        {
-            val : 3,
-            children : [
-                {
-                    val : 5
-                },
-                {
-                    val : 6
-                }
-            ]
-        },
-        {
-            val : 2
-        },
-        {
-            val : 4
+/**
+ * @param {number[]} nums
+ * @return {number}
+ */
+var findLHS = function(nums) {
+    const map = {};
+    for(let num of nums) {
+        map[num] = (map[num] || 0) +1;
+    }
+
+    const difNums = Object.keys(map).sort((a,b)=>a-b);
+    let maxLen = 0;
+    for(let i = 1, len = difNums.length;i<len;i++) {
+        let a = difNums[i];
+        let b = difNums[i-1];
+        if(a-b==1 && map[a]+map[b]>maxLen) {
+            maxLen = map[a]+map[b];
         }
-    ]
-}));
+    }
+
+    return maxLen;
+};
+
+console.log(findLHS([]));
+console.log(findLHS([1,3]));
+console.log(findLHS([1,1,1,1]));
+console.log(findLHS([1,3,2,2,5,2,3,7]));
 </script>
 </body>
