--- a/leetCode.html
+++ b/leetCode.html
@@ -200,31 +200,25 @@ var postorder = function(root) {
 };
 
 /**
- * @param {number[]} nums
+ * @param {number} m
+ * @param {number} n
+ * @param {number[][]} ops
  * @return {number}
  */
-var findLHS = function(nums) {
-    const map = {};
-    for(let num of nums) {
-        map[num] = (map[num] || 0) +1;
-    }
-
-    const difNums = Object.keys(map).sort((a,b)=>a-b);
-    let maxLen = 0;
-    for(let i = 1, len = difNums.length;i<len;i++) {
-        let a = difNums[i];
-        let b = difNums[i-1];
-        if(a-b==1 && map[a]+map[b]>maxLen) {
-            maxLen = map[a]+map[b];
+var maxCount = function(m, n, ops) {
+    const is = [m];
+    const js = [n];
+    for(let op of ops) {
+        if(!op[0]||!op[1]) {
+            continue;
         }
+
+        is.push(op[0]);
+        js.push(op[1]);
     }
 
-    return maxLen;
+    return Math.min(...is) * Math.min(...js);
 };
-
-console.log(findLHS([]));
-console.log(findLHS([1,3]));
-console.log(findLHS([1,1,1,1]));
-console.log(findLHS([1,3,2,2,5,2,3,7]));
+console.log(maxCount(3,3, [[2,2],[0,3]]));
 </script>
 </body>
