--- a/leetCode.html
+++ b/leetCode.html
@@ -200,58 +200,18 @@ var postorder = function(root) {
 };
 
 /**
- * @param {TreeNode} t1
- * @param {TreeNode} t2
- * @return {TreeNode}
+ * @param {number[]} nums
+ * @return {number}
  */
-var mergeTrees = function(t1, t2) {
-    if(!t1) {
-        return t2 || null;
-    }
-
-    if(!t2) {
-        return t1 || null;
-    }
-
-    t1.val += t2.val;
-    t1.left = mergeTrees(t1.left, t2.left);
-    t1.right = mergeTrees(t1.right, t2.right);
-
-    return t1;
+var maximumProduct = function(nums) {
+    nums = nums.sort((a,b)=>a-b);//升序
+    const len = nums.length;
+    return nums[len-1] * Math.max(nums[len-2]*nums[len-3], nums[0]*nums[1]);
 };
 
-var t1 = {
-    val : 1,
-    left : {
-        val : 3,
-        left : {
-            val : 5
-        }
-    },
-    right : {
-        val : 2
-    }
-};
-
-var t2 = {
-    val : 2,
-    left : {
-        val : 1,
-        right : {
-            val : 4
-        }
-    },
-    right : {
-        val : 3,
-        right : {
-            val : 7
-        }
-    }
-};
-//console.log(mergeTrees(t1, null));
-//console.log(mergeTrees(null, null));
-//console.log(mergeTrees(null, t2));
-console.log(mergeTrees(t1, t2));
+console.log(maximumProduct([1,2,3]));
+console.log(maximumProduct([1,2,3,4]));
+console.log(maximumProduct([-4,-1,3,4]));
 
 </script>
 </body>
