--- a/leetCode.html
+++ b/leetCode.html
@@ -200,18 +200,22 @@ var postorder = function(root) {
 };
 
 /**
- * @param {number[]} nums
- * @return {number}
+ * @param {number} c
+ * @return {boolean}
  */
-var maximumProduct = function(nums) {
-    nums = nums.sort((a,b)=>a-b);//升序
-    const len = nums.length;
-    return nums[len-1] * Math.max(nums[len-2]*nums[len-3], nums[0]*nums[1]);
-};
+var judgeSquareSum = function(c) {
+    for(let i = 0, max = Math.sqrt(Math.round(c/2)); i<=max; i++) {
+        if(Math.sqrt(c-i*i)%1==0) {
+            return true;
+        }
+    }
 
-console.log(maximumProduct([1,2,3]));
-console.log(maximumProduct([1,2,3,4]));
-console.log(maximumProduct([-4,-1,3,4]));
+    return false;
+};
+console.log(judgeSquareSum(2));
+//console.log(judgeSquareSum(4));
+//console.log(judgeSquareSum(3));
+//console.log(judgeSquareSum(3736255162552));
 
 </script>
 </body>
