--- a/leetCode.html
+++ b/leetCode.html
@@ -201,28 +201,29 @@ var postorder = function(root) {
 
 /**
  * @param {number[]} nums
- * @param {number} k
- * @return {number}
+ * @return {number[]}
  */
-var findMaxAverage = function(nums, k) {
-    if(nums.length<k) {
-        return nums.reduce((a,b)=>a+b, 0)/k;
+var findErrorNums = function(nums) {
+    const cache = {};
+    let duplicate;
+    for(let num of nums) {
+        if(cache[num]) {
+            duplicate = num;
+        }else {
+            cache[num] = true;
+        }
     }
 
-    let max = 0;
-    for(let i = 0; i<k; i++) {
-        max += nums[i];
+    for(let i = 1, len = nums.length; i<=len; i++) {
+        if(!cache[i]) {
+            return [duplicate, i];
+        }
     }
-    
-    let sum = max;
-    for(let i = k, len = nums.length; i<len; i++) {
-        sum = sum - nums[i-k] + nums[i];
-        max = Math.max(sum, max);
-    }
-
-    return max/k;
 };
-console.log(findMaxAverage([1,12,-5,-6,50,3], 4));
+console.log(findErrorNums([1,2,2,4]));
+console.log(findErrorNums([1,3,3,4]));
+console.log(findErrorNums([2,2]));
+console.log(findErrorNums([3,2,3,4,6,5]));
 
 </script>
 </body>
