--- a/leetCode.html
+++ b/leetCode.html
@@ -200,30 +200,39 @@ var postorder = function(root) {
 };
 
 /**
- * @param {number[]} nums
- * @return {number[]}
+ * @param {TreeNode} root
+ * @param {number} k
+ * @return {boolean}
  */
-var findErrorNums = function(nums) {
+var findTarget = function(root, k) {
     const cache = {};
-    let duplicate;
-    for(let num of nums) {
-        if(cache[num]) {
-            duplicate = num;
+    const travels = (node)=>{
+        if(!node) {
+            return;
+        }
+        cache[node.val] = (cache[node.val] || 0) + 1;
+        travels(node.left);
+        travels(node.right);
+    };
+    travels(root);
+    
+    for(let key in cache) {
+        let anotherKey = k - key;
+        if(key==anotherKey) {
+            if(cache[key]>1) {
+                return true;
+            }
         }else {
-            cache[num] = true;
+            if(cache[anotherKey]) {
+                return true;
+            }
         }
     }
 
-    for(let i = 1, len = nums.length; i<=len; i++) {
-        if(!cache[i]) {
-            return [duplicate, i];
-        }
-    }
+    return false;
 };
-console.log(findErrorNums([1,2,2,4]));
-console.log(findErrorNums([1,3,3,4]));
-console.log(findErrorNums([2,2]));
-console.log(findErrorNums([3,2,3,4,6,5]));
+console.log(findTarget(makeTree([5,3,6,2,4,null,7]), 9));
+console.log(findTarget(makeTree([5,3,6,2,4,null,7]), 28));
 
 </script>
 </body>
