--- a/leetCode.html
+++ b/leetCode.html
@@ -200,33 +200,50 @@ var postorder = function(root) {
 };
 
 /**
- * @param {string} moves
- * @return {boolean}
+ * @param {number[][]} M
+ * @return {number[][]}
  */
-var judgeCircle = function(moves) {
-    let x = 0;
-    let y = 0;
-    for(let move of moves) {
-        switch(move) {
-            case "L":
-                x -= 1;
-                break;
-            case "R":
-                x += 1;
-                break;   
-            case "U":
-                y += 1;
-                break;
-            default:
-                y -= 1;
-                break;
+var imageSmoother = function(M) {
+    const result = [];
+    const getCellAvg = (row, col)=>{
+        let sum = 0;
+        let count = 0;
+        for(let i = row-1, iLen = Math.min(row+1, M.length-1); i<=iLen; i++) {
+            if(i<0) {
+                continue;
+            }
+            for(let j = col-1, jLen = Math.min(col+1, M[i].length-1); j<=jLen;j++) {
+                if(j<0) {
+                    continue;
+                }
+                if(!M[i][j]) {
+                    return 0;
+                }
+            }
+        }
+
+        return 1;
+    };
+    for(let i = 0, iLen = M.length; i<iLen; i++) {
+        for(let j = 0, jLen = M[i].length; j<jLen; j++) {
+            result[i] = result[i] || [];
+            result[i][j] = getCellAvg(i, j);
         }
     }
 
-    return !x && !y;
+    return result;
 };
-console.log(judgeCircle("UD"));
-console.log(judgeCircle("LL"));
+console.log(imageSmoother([
+    [1,1,1],
+    [1,0,1],
+    [1,1,1]
+]));
+
+console.log(imageSmoother([
+    [1,0,1],
+    [1,1,1],
+    [1,1,0]
+]));//[[0,0,0],[0,0,0],[1,0,0]]
 
 </script>
 </body>
