--- a/leetCode.html
+++ b/leetCode.html
@@ -200,31 +200,30 @@ var postorder = function(root) {
 };
 
 /**
- * @param {number[]} nums
- * @return {boolean}
+ * @param {TreeNode} root
+ * @param {number} L
+ * @param {number} R
+ * @return {TreeNode}
  */
-var checkPossibility = function(nums) {
-    let count = 0;
-    for(let i = 0, len = nums.length; i<len-1; i++) {
-        if(nums[i]>nums[i+1]) {
-            if(!i || nums[i+1]>nums[i-1]) {
-                nums[i] = nums[i+1];
-            }else {
-                nums[i+1] = nums[i];
-            }
-            if(++count>1) {
-                return false;
-            }
-        }
+var trimBST = function(root, L, R) {
+    if(!root) {
+        return null;
     }
 
-    return true;
+    if(root.val<L) {
+        return trimBST(root.right, L, R);
+    }
+
+    if(root.val>R) {
+        return trimBST(root.left, L, R);
+    }
+
+    root.left = trimBST(root.left, L, R);
+    root.right = trimBST(root.right, L, R);
+    return root;
 };
-console.log(checkPossibility([4,2,3]));//true
-console.log(checkPossibility([4,2,1]));//false
-console.log(checkPossibility([1,2,3]));//true
-console.log(checkPossibility([3,4,2,3]));//false
-console.log(checkPossibility([2,3,3,2,4]));//true
+console.log(trimBST(makeTree([1,0,2]),1,2));
+console.log(trimBST(makeTree([3,0,4,null,2,null,null,1]),1,3));
 
 
 </script>
