--- a/leetCode.html
+++ b/leetCode.html
@@ -201,29 +201,32 @@ var postorder = function(root) {
 
 /**
  * @param {TreeNode} root
- * @param {number} L
- * @param {number} R
- * @return {TreeNode}
+ * @return {number}
  */
-var trimBST = function(root, L, R) {
-    if(!root) {
-        return null;
+var findSecondMinimumValue = function(root) {
+    let arr = {};
+    const travels = (root) => {
+        if(root) {
+            arr[root.val] = 1;
+            travels(root.left);
+            travels(root.right);
+        }
+    };
+    travels(root);
+    let nums = Object.keys(arr);
+    nums.sort((a, b)=>a-b);
+    let min = nums[0];
+    for(let num of nums) {
+        if(num!==min) {
+            return num;
+        }
     }
 
-    if(root.val<L) {
-        return trimBST(root.right, L, R);
-    }
-
-    if(root.val>R) {
-        return trimBST(root.left, L, R);
-    }
-
-    root.left = trimBST(root.left, L, R);
-    root.right = trimBST(root.right, L, R);
-    return root;
+    return -1;
 };
-console.log(trimBST(makeTree([1,0,2]),1,2));
-console.log(trimBST(makeTree([3,0,4,null,2,null,null,1]),1,3));
+console.log(findSecondMinimumValue(makeTree([2,2,5, null, null, 5, 7])));//5
+console.log(findSecondMinimumValue(makeTree([2,2,2])));//-1
+console.log(findSecondMinimumValue(makeTree([1,1,3,1,1,3,4,3,1,1,1,3,8,4,8,3,3,1,6,2,1])));//2
 
 
 </script>
