--- a/leetCode.html
+++ b/leetCode.html
@@ -200,33 +200,31 @@ var postorder = function(root) {
 };
 
 /**
- * @param {TreeNode} root
+ * @param {number[]} nums
  * @return {number}
  */
-var findSecondMinimumValue = function(root) {
-    let arr = {};
-    const travels = (root) => {
-        if(root) {
-            arr[root.val] = 1;
-            travels(root.left);
-            travels(root.right);
-        }
-    };
-    travels(root);
-    let nums = Object.keys(arr);
-    nums.sort((a, b)=>a-b);
-    let min = nums[0];
-    for(let num of nums) {
-        if(num!==min) {
-            return num;
-        }
+var findLengthOfLCIS = function(nums) {
+    if(!nums.length) {//sanity check
+        return 0;
     }
 
-    return -1;
+    let max = 1;
+    for(let start = 0, len = nums.length; start<len-1; start++) {
+        let count = 1;
+        for(let i = start; i<len-1; i++) {
+            if(nums[i+1]>nums[i]) {
+                count++;
+            }else {
+                break;
+            }
+        }
+        max = Math.max(max, count);
+    }
+
+    return max;
 };
-console.log(findSecondMinimumValue(makeTree([2,2,5, null, null, 5, 7])));//5
-console.log(findSecondMinimumValue(makeTree([2,2,2])));//-1
-console.log(findSecondMinimumValue(makeTree([1,1,3,1,1,3,4,3,1,1,1,3,8,4,8,3,3,1,6,2,1])));//2
+console.log(findLengthOfLCIS([1,3,5,4,7]));//3
+console.log(findLengthOfLCIS([2,2,2,2,2]));//3
 
 
 </script>
