--- a/leetCode.html
+++ b/leetCode.html
@@ -200,38 +200,46 @@ var postorder = function(root) {
 };
 
 /**
- * @param {string} A
- * @param {string} B
+ * @param {TreeNode} root
  * @return {number}
  */
-var repeatedStringMatch = function(A, B) {
-    if(!B) {
-        return 1;
-    }
-    if(!A) {
-        return -1;
-    }
-    let count = 1;
-    let newStr = A;
-    while(true) {
-        if(newStr.indexOf(B)!==-1) {
-            return count;
+var longestUnivaluePath = function(root) {
+    let max = 0;
+    const getLongestPath = (node)=> {
+        if(!node) {
+            return 0;
         }
-        if(newStr.length>A.length+B.length) {
-            break;
-        }
-        newStr += A;
-        count++;
-    }
+        let leftVal = node.left&&node.left.val==node.val ? 1+getLongestPath(node.left) : 0;
+        let rightVal = node.right&&node.right.val==node.val ? 1+getLongestPath(node.right) : 0;
+        return Math.max(leftVal, rightVal);
+    };
 
-    return -1;
+    const travels = (node)=>{
+        if(!node) {
+            return;
+        }
+        
+        let leftVal = 0;
+        if(node.left&&node.left.val==node.val) {
+            leftVal = getLongestPath(node.left) + 1;
+        }
+        let rightVal = 0;
+        if(node.right&&node.right.val==node.val) {
+            rightVal = getLongestPath(node.right) + 1;
+        }
+        max = Math.max(max, leftVal+rightVal);
+        node.left && travels(node.left);
+        node.right && travels(node.right);
+    }
+    travels(root);
+
+    return max;
 };
-console.log(repeatedStringMatch("abcd", "cdabcdab"));
-console.log(repeatedStringMatch("abc", "cabcabca"));
+console.log(longestUnivaluePath(makeTree([5,4,5,1,1,null,5])));
+console.log(longestUnivaluePath(makeTree([1,4,5,4,4,null,5])));
+console.log(longestUnivaluePath(makeTree([1,4,5,4,4,null,5,4])));
+console.log(longestUnivaluePath(makeTree([5,4,5,4,4,5,3,4,4,null,null,null,4,null,null,4,null,null,4,null,4,4,null,null,4,4])));
 
 
 </script>
 </body>
-
-abcabcabcabc
-cabcabca
