--- a/leetCode.html
+++ b/leetCode.html
@@ -200,36 +200,33 @@ var postorder = function(root) {
 };
 
 /**
- * @param {number[]} nums
- * @return {number}
+ * @param {TreeNode} root
+ * @param {number} val
+ * @return {TreeNode}
  */
-var findShortestSubArray = function(nums) {
-    let firstPos = {};
-    let lastPos = {};
-    let count = {};
-    for(let i = 0, len = nums.length; i<len; i++) {
-        let num = nums[i];
-        count[num] = (count[num]||0) + 1;
-        lastPos[num] = i;
-        if(firstPos[num]===void 0) {
-            firstPos[num] = i;
+var searchBST = function(root, val) {
+    if(!root) {
+        return null;
+    }
+    if(root.val==val) {
+        return root;
+    }
+    if(root.left) {
+        let node = searchBST(root.left, val);
+        if(node) {
+            return node;
         }
     }
-    let degNums = [];
-    let max = 0;
-    for(let num in count) {
-        if(count[num]>max) {
-            degNums = [num];
-            max = count[num];
-        }else if(count[num]==max) {
-            degNums.push(num);
+    if(root.right) {
+        let node = searchBST(root.right, val);
+        if(node) {
+            return node;
         }
     }
-    return Math.min(...degNums.map(num=>{
-        return lastPos[num] - firstPos[num] + 1;
-    }))
+    return null;
 };
-console.log(findShortestSubArray([1, 2, 2, 3, 1]));//2
-console.log(findShortestSubArray([1,2,2,3,1,4,2]));//6
+console.log(searchBST(makeTree([4,2,7,1,3]), 2));
+console.log(searchBST(makeTree([4,2,7,1,3]), 5));
+console.log(searchBST(makeTree([]), 1));
 </script>
 </body>
