--- a/leetCode.html
+++ b/leetCode.html
@@ -200,33 +200,42 @@ var postorder = function(root) {
 };
 
 /**
- * @param {TreeNode} root
- * @param {number} val
- * @return {TreeNode}
+ * @param {number} k
+ * @param {number[]} nums
  */
-var searchBST = function(root, val) {
-    if(!root) {
-        return null;
-    }
-    if(root.val==val) {
-        return root;
-    }
-    if(root.left) {
-        let node = searchBST(root.left, val);
-        if(node) {
-            return node;
-        }
-    }
-    if(root.right) {
-        let node = searchBST(root.right, val);
-        if(node) {
-            return node;
-        }
-    }
-    return null;
+var KthLargest = function(k, nums) {
+    this.k = k;
+    this.nums = nums.sort((a,b)=>a-b);
 };
-console.log(searchBST(makeTree([4,2,7,1,3]), 2));
-console.log(searchBST(makeTree([4,2,7,1,3]), 5));
-console.log(searchBST(makeTree([]), 1));
+
+/** 
+ * @param {number} val
+ * @return {number}
+ */
+KthLargest.prototype.add = function(val) {
+    if(!this.nums.length || val>=this.nums[this.nums.length-1]) {
+        this.nums.push(val);
+    }else if(val<=this.nums[0]) {
+        this.nums.unshift(val);
+    }else {
+        for(let i = this.nums.length-1; i>0; i--) {
+            if(this.nums[i]>=val && val>=this.nums[i-1]) {
+                this.nums.splice(i, 0, val);
+                break;
+            }
+        }
+    }
+    if(this.nums.length<this.k) {
+        return null;
+    }else {
+        return this.nums[this.nums.length-this.k];
+    }
+};
+var kthLargest = new KthLargest(3,[4,5,8,2]);
+console.log(kthLargest.add(3));   // returns 4
+console.log(kthLargest.add(5));   // returns 5
+console.log(kthLargest.add(10));  // returns 5
+console.log(kthLargest.add(9));   // returns 8
+console.log(kthLargest.add(4));   // returns 8
 </script>
 </body>
