--- a/leetCode.html
+++ b/leetCode.html
@@ -200,42 +200,31 @@ var postorder = function(root) {
 };
 
 /**
- * @param {number} k
  * @param {number[]} nums
- */
-var KthLargest = function(k, nums) {
-    this.k = k;
-    this.nums = nums.sort((a,b)=>a-b);
-};
-
-/** 
- * @param {number} val
+ * @param {number} target
  * @return {number}
  */
-KthLargest.prototype.add = function(val) {
-    if(!this.nums.length || val>=this.nums[this.nums.length-1]) {
-        this.nums.push(val);
-    }else if(val<=this.nums[0]) {
-        this.nums.unshift(val);
-    }else {
-        for(let i = this.nums.length-1; i>0; i--) {
-            if(this.nums[i]>=val && val>=this.nums[i-1]) {
-                this.nums.splice(i, 0, val);
-                break;
-            }
+var search = function(nums, target) {
+    for(var low = 0, high = nums.length-1, mid=Math.ceil((high+low)/2);mid<=high;mid=Math.ceil((high+low)/2)) {
+        if(target==nums[high]) {
+            return high
+        }else if(target==nums[mid]) {
+            return mid;
+        }else if(target<nums[mid]) {
+            high = Math.min(mid, high-1);
+        }else if(target>nums[mid]){
+            low = Math.max(mid, low+1);
+        }else {
+            break;
         }
     }
-    if(this.nums.length<this.k) {
-        return null;
-    }else {
-        return this.nums[this.nums.length-this.k];
-    }
+
+    return -1;
 };
-var kthLargest = new KthLargest(3,[4,5,8,2]);
-console.log(kthLargest.add(3));   // returns 4
-console.log(kthLargest.add(5));   // returns 5
-console.log(kthLargest.add(10));  // returns 5
-console.log(kthLargest.add(9));   // returns 8
-console.log(kthLargest.add(4));   // returns 8
+console.log(search([-1,0,3,5,9,12], 9));//4
+console.log(search([-1,0,3,5,9,12], 2));//-1
+console.log(search([-1,0,3,5,9,12], 5));//3
+console.log(search([-1,0], 0));//1
+console.log(search([2,5], 2));//0
 </script>
 </body>
