--- a/leetCode.html
+++ b/leetCode.html
@@ -200,31 +200,45 @@ var postorder = function(root) {
 };
 
 /**
- * @param {number[]} nums
- * @param {number} target
- * @return {number}
+ * Initialize your data structure here.
  */
-var search = function(nums, target) {
-    for(var low = 0, high = nums.length-1, mid=Math.ceil((high+low)/2);mid<=high;mid=Math.ceil((high+low)/2)) {
-        if(target==nums[high]) {
-            return high
-        }else if(target==nums[mid]) {
-            return mid;
-        }else if(target<nums[mid]) {
-            high = Math.min(mid, high-1);
-        }else if(target>nums[mid]){
-            low = Math.max(mid, low+1);
-        }else {
-            break;
-        }
-    }
-
-    return -1;
+ var MyHashSet = function() {
+    this.map = {};
 };
-console.log(search([-1,0,3,5,9,12], 9));//4
-console.log(search([-1,0,3,5,9,12], 2));//-1
-console.log(search([-1,0,3,5,9,12], 5));//3
-console.log(search([-1,0], 0));//1
-console.log(search([2,5], 2));//0
+
+/** 
+ * @param {number} key
+ * @return {void}
+ */
+MyHashSet.prototype.add = function(key) {
+    this.map[key] = true;
+};
+
+/** 
+ * @param {number} key
+ * @return {void}
+ */
+MyHashSet.prototype.remove = function(key) {
+    delete this.map[key];
+};
+
+/**
+ * Returns true if this set contains the specified element 
+ * @param {number} key
+ * @return {boolean}
+ */
+MyHashSet.prototype.contains = function(key) {
+    return !!this.map[key];
+};
+
+var hashSet = new MyHashSet();
+console.log(hashSet.add(1));         
+console.log(hashSet.add(2));         
+console.log(hashSet.contains(1));    // returns true
+console.log(hashSet.contains(3));    // returns false (not found)
+console.log(hashSet.add(2));          
+console.log(hashSet.contains(2));    // returns true
+console.log(hashSet.remove(2));          
+console.log(hashSet.contains(2));    // returns false (already removed)
 </script>
 </body>
