--- a/leetCode.html
+++ b/leetCode.html
@@ -200,142 +200,22 @@ var postorder = function(root) {
 };
 
 /**
- * Initialize your data structure here.
+ * @param {string} str
+ * @return {string}
  */
-var MyLinkedList = function() {
-    this.root = this.createNode(null);
-};
-
-MyLinkedList.prototype.createNode = function(val) {
-    return {val, next:null};
-};
-
-/**
- * Get the value of the index-th node in the linked list. If the index is invalid, return -1. 
- * @param {number} index
- * @return {number}
- */
-MyLinkedList.prototype.get = function(index) {
-    if(index<0) {
-        return -1;
-    }
-    let cur = -1;
-    let node = this.root;
-    while(cur<=index) {
-        if(!node) {
-            break;
+var toLowerCase = function(str) {
+    return str.split("").map(v=>{
+        let charCode = v.charCodeAt(0);
+        if(charCode>=65 && charCode<=90) {
+            return String.fromCharCode(charCode+32);
+        }else {
+            return v;
         }
-        if(cur==index) {
-            return node.val;
-        }
-        node = node.next;
-        cur++;
-    }
-
-    return -1;
+    }).join("");
 };
-
-/**
- * Add a node of value val before the first element of the linked list. After the insertion, the new node will be the first node of the linked list. 
- * @param {number} val
- * @return {void}
- */
-MyLinkedList.prototype.addAtHead = function(val) {
-    let next = this.root.next;
-    let newNode = this.createNode(val);
-    newNode.next = next;
-    this.root.next = newNode;
-};
-
-/**
- * Append a node of value val to the last element of the linked list. 
- * @param {number} val
- * @return {void}
- */
-MyLinkedList.prototype.addAtTail = function(val) {
-    let node = this.root;
-    while(node.next) {
-        node = node.next;
-    }
-    node.next = this.createNode(val);
-};
-
-/**
- * Add a node of value val before the index-th node in the linked list. If index equals to the length of linked list, the node will be appended to the end of linked list. If index is greater than the length, the node will not be inserted. 
- * @param {number} index 
- * @param {number} val
- * @return {void}
- */
-MyLinkedList.prototype.addAtIndex = function(index, val) {
-    index = Math.max(index, 0);
-    let cur = -1;
-    let node = this.root;
-    while(cur++<=index) {
-        if(!node) {
-            break;
-        }
-        if(cur==index) {
-            let next = node.next;
-            let newNode = this.createNode(val);
-            newNode.next = next;
-            node.next = newNode;
-            return;
-        }
-        node = node.next;
-    }
-};
-
-/**
- * Delete the index-th node in the linked list, if the index is valid. 
- * @param {number} index
- * @return {void}
- */
-MyLinkedList.prototype.deleteAtIndex = function(index) {
-    if(index<0) {
-        return;
-    }
-    let cur = -1;
-    let node = this.root;
-    while(cur++<=index) {
-        if(!node) {
-            break;
-        }
-        if(cur==index) {
-            if(node.next) {
-                node.next = node.next.next;
-            }
-            return;
-        }
-        node = node.next;
-    }
-};
-// var linkedList = new MyLinkedList();
-// linkedList.addAtHead(1);
-// linkedList.addAtTail(3);
-// linkedList.addAtIndex(1, 2);  // linked list becomes 1->2->3
-// console.log(linkedList.get(1));            // returns 2
-// linkedList.deleteAtIndex(1);  // now the linked list is 1->3
-// console.log(linkedList.get(1));            // returns 3
-
-// var linkedList = new MyLinkedList();
-// linkedList.addAtHead(1);
-// linkedList.addAtTail(3);
-// linkedList.addAtIndex(1,2);
-// console.log(linkedList.get(-1));
-// linkedList.deleteAtIndex(1);
-// console.log(linkedList.get(-3));
-
-// var linkedList = new MyLinkedList();
-// linkedList.addAtIndex(-1, 0);
-// console.log(linkedList.get(0));
-// linkedList.deleteAtIndex(-1);
-
-var linkedList = new MyLinkedList();
-linkedList.addAtHead(1);
-linkedList.addAtTail(3);
-linkedList.addAtIndex(4,2);
-console.log(linkedList.get(1));//3
-linkedList.deleteAtIndex(-1);
-console.log(linkedList.get(1));//3
+console.log(toLowerCase("Hello"));
+console.log(toLowerCase("here"));
+console.log(toLowerCase("LOVELY"));
+console.log(toLowerCase("1OVELY"));
 </script>
 </body>
